# ibmP

./: .gitignore  CMakeLists.txt  buildMPI.sh  buildOMP.sh  readme.txt
MainProgram/: IBMain.cpp  ImmersedFiber.cpp  ImmersedFiber.h  Makefile  README
Results/: .gitignore  IBBib.bib  StrMPI.eps  StrongScFibers.eps  StrongScPoints.eps  WeakMPI.eps  WeakScFibers.eps  summary.tex
boundary/: CMakeLists.txt  ImmersedFiber.cpp  ImmersedFiber.h
exe/: CMakeLists.txt  ibmP.cpp  inputs.txt
input/: inputs.txt
solver/: CMakeLists.txt  fluidSolver.cpp  fluidSolver.h  mpi_fluidsolver_example.cpp
